--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Weather.CSS" <body>
+    <link rel="stylesheet" href="Weather.CSS">
+
+<body>
 
     <h1>"When I was young, I prayed for lightning"-Elton John</h1>
 
@@ -46,6 +48,6 @@
 
         <img src="https://www.gannett-cdn.com/presto/2019/01/21/USAT/3b576274-67c5-4258-8d77-672a1939644b-all_snow.JPG?crop=3225,1828,x0,y88&width=3200&height=1680&fit=bounds"
             alt="alternate text" title="infotip text" />
-        </body>
+</body>
 
 </html>
