--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         </div>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
         <script src="script2.js"></script>
 
         <img src="https://www.gannett-cdn.com/presto/2019/01/21/USAT/3b576274-67c5-4258-8d77-672a1939644b-all_snow.JPG?crop=3225,1828,x0,y88&width=3200&height=1680&fit=bounds"
